<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sales Force Automation</string>
    <string name="title_menu_detail">Menu Detail</string>
    <string name="action_settings">Settings</string>
    <string name="content_description">CD</string>
    <string name="login">Login</string>
    <string name="login_id">User ID:</string>
    <string name="password">Login Password:</string>
    <string name="hint_login_id">Enter Login ID</string>
    <string name="hint_password">Enter Password</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="products">Products</string>
    <string name="piechart_monthly">Monthly Status</string>
    <string name="piechart_daily">Today\'s Status</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Dashboard</item>
        <item>Distributors</item>
        <item>Products</item>
        <item>Retailers</item>
        <item>Start a Day</item>
        <item>Orders</item>
        <item>Add Retailer</item>
        <item>Stores Around Me</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/dashboard</item>
        <item>@drawable/distributors</item>
        <item>@drawable/products</item>
        <item>@drawable/retailer</item>
        <item>@drawable/start</item>
        <item>@drawable/orders</item>
        <item>@drawable/add_retailer</item>
        <item>@drawable/stores</item>
    </array>

    <string-array name="States">
        <item>Maharastra</item>
        <item>Karanataka</item>
        <item>Madhapradesh</item>
    </string-array>
    <string-array name="Cities">
        <item>Pune</item>
        <item>Kolhapur</item>
        <item>Sangli</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
